change style for navbar menu

--- a/personaldata.html
+++ b/personaldata.html
@@ -83,7 +83,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <form action="" method="POST">
+                    <form class="form-horizontal" action="" method="POST">
                         <div class="field">
                             <label>Name</label>
                             <input type="text" name="name" placeholder="Leonardo">
@@ -101,7 +101,7 @@
                             <input type="text" name="phone_number" maxlength="9" placeholder="798 000 001">
                         </div>
                     </form>
-                    <form action="" method="POST">
+                    <form class="form-horizontal" action="" method="POST">
                         <div class="field">
                             <label>Skype</label>
                             <input type="text" name="skype" placeholder="Leonardo.D">
@@ -115,13 +115,13 @@
                             <input type="email" name="msn">
                         </div>
                     </form>
-                    <form action="" method="POST">
+                    <form class="form-horizontal" action="" method="POST">
                         <div class="field">
                             <label>Wallet</label>
                             <input type="text" name="wallet">
                         </div>
                     </form>
-                    <form action="" method="POST">
+                    <form class="form-horizontal" action="" method="POST">
                         <div class="field">
                             <label>Password</label>
                             <input type="password" name="password">
