--- a/payout.html
+++ b/payout.html
@@ -83,7 +83,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-sm-12">
+                    <div class="col-md-12 col-sm-12 ">
                         <div class="calendar">
                             <p>16.05.2016</p>
                             <p>16.05.2016 <img class="icon" src="images/icons/calendar.svg"></p>
@@ -99,10 +99,10 @@
                         <div class="table">
                             <!-- Row 1 -->
                             <div class="table-row">
-                                <div class="table-item">17/08/02 (12:58)</div>
-                                <div class="table-item">34,425.00</div>
-                                <div class="table-item">cpl (200)</div>
-                                <div class="table-item">bank</div>
+                                <div class="table-item">Date</div>
+                                <div class="table-item">Amount ($)</div>
+                                <div class="table-item">Deal</div>
+                                <div class="table-item">Account</div>
                             </div>
                             <!-- Row 2 -->
                             <div class="table-row">
@@ -153,9 +153,42 @@
                                 <div class="table-item">cpl (200)</div>
                                 <div class="table-item">bank</div>
                             </div>
+                            <!-- Row 9 -->
+                            <div class="table-row">
+                                <div class="table-item">17/08/02 (12:58)</div>
+                                <div class="table-item">34,425.00</div>
+                                <div class="table-item">cpl (200)</div>
+                                <div class="table-item">bank</div>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <ul class="list-group pagination">
+                        <li class="list-group-item">
+                            <a href="#">
+                                <span>&laquo;</span>
+                            </a>
+                        </li>
+                        <li class="list-group-item"><a href="">1</a></li>
+                        <li class="list-group-item"><a href="">2</a></li>
+                        <li class="list-group-item"><a href="">3</a></li>
+                        <li class="list-group-item"><a href="">4</a></li>
+                        <li class="list-group-item"><a href="">5</a></li>
+                        <li class="list-group-item"><a href="">6</a></li>
+                        <li class="list-group-item"><a href="">7</a></li>
+                        <li class="list-group-item"><a href="">8</a></li>
+                        <li class="list-group-item"><a href="">9</a></li>
+                        <li class="list-group-item">
+                            <a href="#">
+                                <span>&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </div>
     <script src="js/script.js"></script>
