--- a/postback.html
+++ b/postback.html
@@ -23,7 +23,7 @@
                 <a href="index.html"><img class="icon" src="images/icons/general.svg">General</a>
             </li>
             <li class="list-group-item list-hover">
-                <a href="#"><img class="icon" src="images/icons/details.svg">Details</a>
+                <a href="details.html"><img class="icon" src="images/icons/details.svg">Details</a>
             </li>
             <li class="list-group-item list-hover">
                 <a href="links.html"><img class="icon" src="images/icons/links.svg">Links</a>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="col-md-6 col-sm-6">
                         <form class="form-inline" action="" method="POST">
-                            <div class="field">
+                            <div class="field range">
                                 <label>Send after:</label>
                                 <input type="range" min="0" max="168" value="104" step="1">
                             </div>
