--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="index.html"><img class="icon" src="images/icons/general.svg">General</a>
             </li>
             <li class="list-group-item list-hover">
-                <a href="#"><img class="icon" src="images/icons/details.svg">Details</a>
+                <a href="details.html"><img class="icon" src="images/icons/details.svg">Details</a>
             </li>
             <li class="list-group-item list-hover">
                 <a href="links.html"><img class="icon" src="images/icons/links.svg">Links</a>
