--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                             <a href="#" class="quit" id="quit"><img class="icon" src="images/icons/quit.svg">
                                 <div class="overlay" id="overlay">
                                     <div class="modal" id="myModal">
-                                        <div class="btn close js--close-modal">x</div>
+                                        <!-- <div class="btn close js--close-modal">x</div> -->
                                         <h3>Do you really want to Quit?</h3>
-                                        <button class="btn btn-secondary btn-lg js--close-modal">Cancel</button>
+                                        <button class="btn btn-secondary btn-lg  js--close-modal">Cancel</button>
                                         <button class="btn btn-primary btn-lg js--close-modal">Quit</button>
                                     </div>
                                 </div>
@@ -119,6 +119,7 @@
                         </div>
                         <div class="col-offset-md-2 col-md-8 col-offset-md-2 graph-chart">
                             <h4 class="graph-title">Earning chart</h4>
+                            <canvas id="myChart"></canvas>
                             <div class="scroll-wrapper">
                                 <img class="graph table" src="images/icons/graph.svg">
                             </div>
@@ -253,6 +254,7 @@
                 </div>
         </section>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
